--- a/gamerule.css
+++ b/gamerule.css
@@ -5,7 +5,16 @@ h1 {
 }
 h2 {
   font-family: Garamond, serif;
-  
+
+}
+
+.indent {
+  margin-left: 3%;
+  margin-right: 3%;
+}
+.indent2 {
+  margin-left: 6%;
+  margin-right: 6%;
 }
 
 /* Title Styling */
@@ -18,7 +27,7 @@ h2 {
   background-position: cover;
   background-size: 100%;
   background-repeat: no-repeat;
-  
+
   color: #B49933;
   font-size: 30px;
   font-family: Garamond, serif;
@@ -38,8 +47,8 @@ ul {
   overflow: hidden;
   /*background-color: #333;
   background-image: url("img/navbar.jpg");*/
-  
- 
+
+
 }
 
 
@@ -122,7 +131,7 @@ ul {
   z-index: 1;
   border: solid #ffffff;
   border-width: 5px;
-	Border-style: outset;		
+	Border-style: outset;
 	background-color: #FCF5E5;
 	background-repeat: repeat-y;
 }
@@ -147,7 +156,7 @@ ul {
 	/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
-} 
+}
 
 .active {
   background-color: #04AA6D;
@@ -175,9 +184,9 @@ iframe.infoboxiframe {
 	background-image: url("img/bookpage.jpg");
 	background-color: #FCF5E5;
 	background-repeat: repeat-y;
-	
+
 	width: 98%;
-	height: 250px;	
+	height: 250px;
 }
 
 div.dungeongen {
@@ -235,7 +244,7 @@ div.book {
 }
 
 img.inline {
-    height: 1em; 
+    height: 1em;
     width: 1em;
 }
 
@@ -266,7 +275,7 @@ div.regionmapcontianer {
 
 table, {
 	width: 100%;
-	
+
 }
 
 th {
@@ -430,7 +439,7 @@ th.infobox-data {
 /* Special Tags */
 
 p.AutoUpdateTag {
-display: none;	
+display: none;
 }
 
 /* Collapsible */
@@ -446,7 +455,7 @@ display: none;
   text-align: left;
   outline: none;
   font-size: 15px;
-  
+
 }
 
 .active, .collapsible:hover {
@@ -577,7 +586,7 @@ button.mediacontrollbutton#stop:hover {
 	margin-right: 1em;
     padding: 20px;
     width: auto;
-	
+
 }
 
 .toc_title {
@@ -665,7 +674,7 @@ figure.left {
 figure.left:hover {
   transform: scale(2.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   transition-delay:1s;
-  
+
 }
 
 figure.right:hover {
@@ -676,5 +685,5 @@ figure.right:hover {
 figcaption.basic {
 	text-align: center;
 	border-bottom: 3px solid #0ea9c8;
-	background-color: rgba(121, 225, 246, 0.42);	
+	background-color: rgba(121, 225, 246, 0.42);
 }
