--- a/Fallout/fallout.css
+++ b/Fallout/fallout.css
@@ -33,6 +33,28 @@ img.pagebg {
   bottom: 0vh;
   left: 28vw;
   z-index: -100;
+  cursor: pointer;
+  cursor: url('img/cursor1.png'), auto;
+}
+
+.screen a {
+  cursor: pointer;
+  cursor: url('img/cursor2.png'), auto;
+}
+
+.screen p {
+  cursor: pointer;
+  cursor: url('img/cursor3.png') 0 -10, auto;
+}
+
+.screen p {
+  cursor: pointer;
+  cursor: url('img/cursor3.png') 0 -10, auto;
+}
+
+.navcontainer a {
+  cursor: pointer;
+  cursor: url('img/cursor2.png'), auto;
 }
 
 .screen:before {
@@ -116,6 +138,8 @@ p:last-child:after {
   font-family:'Fira Mono', monospace;
   font-size:30px;
   line-height: 70px;
+  cursor: pointer;
+  cursor: url('img/cursor1.png'), auto;
 }
 
 .navcontainer:after {
@@ -151,12 +175,15 @@ p:last-child:after {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  cursor: pointer;
+  cursor: url('img/cursor2.png'), auto;
 }
 
 /* The dropdown container */
 .dropdown {
   float: left;
   overflow: hidden;
+  cursor: url('img/cursor1.png'), auto;
 }
 
 /* Dropdown button */
@@ -173,7 +200,7 @@ p:last-child:after {
   border: solid 2px #00000000;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-
+cursor: url('img/cursor2.png'), auto;
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
@@ -353,6 +380,11 @@ iframe.falloutwiki {
   height: 80%;
   border: none;
 }
+
+iframe.bigmap {
+  cursor: url('img/cursor4.png') 10 -10, auto;
+}
+
 div.greentint {
   position: absolute;
   width: 85%;
@@ -417,7 +449,7 @@ div.timelinecontrol {
   width: 100%;
   text-align: center;
   position: fixed;
-
+  cursor: url('img/cursor1.png'), auto;
 }
 
 .hidden {
@@ -431,6 +463,7 @@ div.screen ul a {
 /* Style checkboxes */
 input[type="checkbox"] {
   display: none; /* Hide the default checkbox */
+  cursor: url('img/cursor2.png'), auto;
 }
 
 input[type="checkbox"] + label:before {
@@ -443,10 +476,15 @@ input[type="checkbox"] + label:before {
   margin-top: 3px;
   border-radius: 50%;
   background-color: white;
+  cursor: url('img/cursor2.png'), auto;
 }
 
 input[type="checkbox"]:checked + label:before {
   background-color: orange; /* Change the background color when checked */
+}
+
+div.timelinecontrol label {
+  cursor: url('img/cursor1.png'), auto;
 }
 
 
