--- a/Fallout/fallout.css
+++ b/Fallout/fallout.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
 body {
   background-color:#000;
   margin:0;
@@ -14,6 +18,32 @@ img.pagebg {
   pointer-events: none;
 }
 
+.pipboytext {
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #009a00 #222222;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #222222;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #009a00;
+    border-radius: 24px;
+    border: 7px solid #009a00;
+  }
+
 /* Pipboy Screen */
 
 .screen {
@@ -21,11 +51,12 @@ img.pagebg {
   background-image:radial-gradient(#444, #111);
   box-shadow:0 0 5vmin 1vmin #000 inset;
   box-sizing:border-box;
-  font-family:'Fira Mono', monospace;
-  font-size:1.1em;
+  /* font-family:'Fira Mono', monospace; */
+  font-family: 'Share Tech Mono', monospace;
+  font-size:1.05em;
   height:80vh;
   overflow:hidden;
-  overflow-y: scroll;
+
   padding:10vmin;
   width:71vw;
   height:90vh;
@@ -44,12 +75,7 @@ img.pagebg {
 
 .screen p {
   cursor: pointer;
-  cursor: url('img/cursor3.png') 0 -10, auto;
-}
-
-.screen p {
-  cursor: pointer;
-  cursor: url('img/cursor3.png') 0 -10, auto;
+  cursor: url('img/cursor3.png') 6 12, auto;
 }
 
 .navcontainer a {
@@ -121,6 +147,16 @@ p:last-child:after {
   }
 }
 
+/* Content Window */
+div.contentwindow {
+  margin-left: -5%;
+  padding-left: 3%;
+  padding-right: 3%;
+  overflow-y: scroll; /* Show vertical scrollbar */
+  width: 100%;
+  height: 100%;
+}
+
 /* Pipboy Navbar */
 
 .navcontainer {
@@ -135,11 +171,12 @@ p:last-child:after {
   left: 25vw;
   z-index: -90;
   color: #009a00;
-  font-family:'Fira Mono', monospace;
-  font-size:30px;
-  line-height: 70px;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: calc(1vw + 1.75vh);
+  line-height: calc(3.5vh + 1.5vw);
   cursor: pointer;
   cursor: url('img/cursor1.png'), auto;
+  vertical-align: middle;
 }
 
 .navcontainer:after {
@@ -158,22 +195,24 @@ p:last-child:after {
 
 .navtitle {
   display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  padding-top: 1.3%;
+  vertical-align: bottom;
+
+  padding-top: 1%;
   float: left;
   margin-right: 2%;
   margin-left: 6%;
+  font-weight: bold;
 
 }
 
 /* Links inside the navbar */
 .navbar a {
+
   float: left;
-  font-size: 16px;
+
   color: white;
   text-align: center;
-  padding: 14px 16px;
+
   text-decoration: none;
   cursor: pointer;
   cursor: url('img/cursor2.png'), auto;
@@ -183,24 +222,31 @@ p:last-child:after {
 .dropdown {
   float: left;
   overflow: hidden;
+  padding-top: 0.35%;
+
   cursor: url('img/cursor1.png'), auto;
 }
 
 /* Dropdown button */
+.dropbtn {
+  margin-left: 1vw;
+
+}
+
 .dropdown .dropbtn {
   color: #009a00;
   font-family:'Fira Mono', monospace;
-  font-size:30px;
+  color: orange;
   border: none;
   outline: none;
 
-  padding: 14px 16px;
-  padding-top: 1.3%;
+  vertical-align: bottom;
+  font-size: calc(1vw + 1vh);
   background-color: inherit;
   border: solid 2px #00000000;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-cursor: url('img/cursor2.png'), auto;
+  cursor: url('img/cursor2.png'), auto;
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
@@ -212,6 +258,7 @@ cursor: url('img/cursor2.png'), auto;
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
+  color: Orange;
   display: none;
   position: absolute;
   background-color: #444;
@@ -224,6 +271,8 @@ cursor: url('img/cursor2.png'), auto;
   border-top: none;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  font-size: calc(1.2vw + 1.2vh);
+  line-height: calc(0.8vw + 0.8vh);
 }
 
 .dropdown-content:after {
@@ -242,8 +291,8 @@ cursor: url('img/cursor2.png'), auto;
 /* Links inside the dropdown */
 .dropdown-content a {
   float: none;
-  color: #009a00;
-  padding: 12px 16px;
+  color: Orange;
+  padding: none;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -257,7 +306,7 @@ cursor: url('img/cursor2.png'), auto;
 .dropdown-content a:hover {
   background-color: #009a00;
   font-weight: bolder;
-  color: #444;
+  color: #FFBF00;
 }
 
 /* Show the dropdown menu on hover */
@@ -406,7 +455,7 @@ div.greentint {
    border: solid 2px #009a00;
  }
 
-div.screen p a {
+div.screen a {
   color: orange;
 }
 
@@ -438,6 +487,23 @@ div.screen ul.timeline ul li.nu {
   font-style: bolder;
   border-top: solid 1px #DCCF68;
   border-bottom: solid 1px #DCCF68;
+}
+
+ul {
+  list-style-type: '☢';
+  overflow:hidden;
+}
+
+ul ul {
+  list-style-type: '⚙';
+}
+
+ul ul ul {
+  list-style-type: '㊷';
+}
+
+ul li {
+  padding-inline-start: 1ch;
 }
 
 div.timelinecontrol {
@@ -487,8 +553,21 @@ div.timelinecontrol label {
   cursor: url('img/cursor1.png'), auto;
 }
 
+figure.right {
+  float: right;
+  margin-left: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 
-/* Nixie Clock */
+figure.left {
+  float: left;
+  margin-right: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+/* Flip Clock */
 div#date {
   	position: fixed;
   	top: 0;
@@ -501,22 +580,112 @@ div#date {
     margin-top: 3.2vh;
     border-radius: 2%;
     font-family: Oswald, sans-serif;
-    font-size: 1.5em;
+    font-size: calc(0.75vw + 0.875vh);
+    line-height: calc(1.5vh + 0.75vw);
     color: #FFFFF0;
     font-weight: bold;
 }
 span#day {
-  letter-spacing: 0.5vw;
+    letter-spacing: calc(0.375vw + 0.4375vh);
 }
+
 span#month {
-  margin-left: 0.25vw;
-  letter-spacing: 0.5vw;
+    margin-left: calc(0.1875vw + 0.21875vh);
+    letter-spacing: calc(0.275vw + 0.4375vh);
 }
+
 span#year {
-  margin-left: 0.5vw;
-  letter-spacing: 0.6vw;
+    margin-left: calc(0.3vw + 0.35vh);
+    letter-spacing: calc(0.4125vw + 0.48125vh);
 }
+
 div#date span.time {
-  margin-left: 3.7vw;
-  letter-spacing: 0.57vw;
+    margin-left: calc(2.2vw + 3.225vh);
+    letter-spacing: calc(0.3275vw + 0.49875vh);
+}
+
+/* Collapsible */
+
+.collapsible {
+  background-color: #c76700;
+  color: #222222;
+  cursor: url('img/cursor2.png'), auto;
+  font-weight: bold;
+  font-size: 1em;
+  text-align: left;
+  outline: none;
+  border: none;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  margin-top: 0.5vh;
+}
+
+.collapsible:hover {
+  background-color: orange;
+}
+.active {
+  background-color: #c76700;
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  max-width: 0;
+  overflow: hidden;
+  transition: max-height 0.1s ease-out, max-width 0.1s ease-out, border 0.1s ease-out;
+  background-color: rgba(179, 92, 0, 0.2);
+  margin-bottom: 0.5vh;
+  color: #c76700;
+}
+
+.content-border {
+  border: solid 3px #c76700;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.collapsible.active + .content {
+  border: solid 3px #c76700;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  max-width: 95%;
+  transition: max-height 0.1s ease-out, max-width 0.1s ease-out, border 0.1s ease-out;
+}
+
+.collapsible:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+
+    float: left;
+
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+/* Tables in Colapseables */
+
+.content table {
+  border-collapse: collapse;
+  border: 2px solid #c76700;
+  width: 100%;
+}
+
+.content table th {
+  font-weight: bold;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+
+}
+
+.content table td {
+  color: #c76700;
+  border: 1px solid #c76700;
+}
+
+
+.content table tr:nth-child(even) {
+  background-color: rgba(0, 0, 0, 0.3);
 }
