--- a/Fallout/fallout.css
+++ b/Fallout/fallout.css
@@ -44,6 +44,11 @@ img.pagebg {
     border: 7px solid #009a00;
   }
 
+/* Hide all elements except for div.screen and its children on mobile devices */
+  body.mobile > *:not(.screen, .screen *) {
+    display: none;
+  }
+
 /* Pipboy Screen */
 
 .screen {
@@ -149,28 +154,32 @@ p:last-child:after {
 
 /* Content Window */
 div.contentwindow {
+  flex-grow: 1;
   margin-left: -5%;
   padding-left: 3%;
   padding-right: 3%;
   overflow-y: scroll; /* Show vertical scrollbar */
   width: 100%;
-  height: 100%;
+  height: 110%;
 
 }
 
 /* Pipboy Navbar */
 
 .navcontainer {
+  margin:0;
+  height: 8%;
+  width: 100%;
+  flex-shrink: 0; /* make sure the navbar doesn't shrink */
   background-color: none;
   background-image:linear-gradient(#080808, #161616);
   box-shadow: 0 0 5px 10px linear-gradient(#080808, #161616);
   border-bottom: solid 5px #009a00;
-  width:75vw;
-  height:8%;
   position: absolute;
-  top: 7vh;
-  left: 25vw;
-  z-index: -90;
+  top: 0.5em;
+  left: 0;
+
+  z-index: 1;
   color: #009a00;
   font-family: 'Share Tech Mono', monospace;
   font-size: calc(1vw + 1.75vh);
@@ -382,8 +391,17 @@ figure {
   float:right;
   border: 2px #009a00 solid;
   padding: 4px;
-  margin: auto;
+  margin-top: 0.5em;
+  margin-left: 0.5em;
+  margin-bottom: 0.5em;
   width: 25%;
+}
+
+figure.left {
+  margin-right: 0.5em;
+  margin-left: 0;
+  margin-top: 0.5em;
+  margin-bottom: -0.5em;
 }
 
 figcaption {
@@ -511,7 +529,7 @@ div.timelinecontrol {
   background-image:linear-gradient(#202020, #242424);
   display: block;
   margin-left: -20vw;
-  margin-top: -4vh;
+  margin-bottom: 2px;
   border-bottom: solid 2px #009a00;
   width: 100%;
   text-align: center;
