--- a/projects/WCSpace/wcspace.css
+++ b/projects/WCSpace/wcspace.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: 'standard_galactic_alphabetRg';
+    src: url('res/sga-webfont.woff2') format('woff2'),
+         url('res/sga-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 
-
-
+}
 
 body {
   background-position: left top;
@@ -95,6 +100,15 @@ div.topnav {
   background: linear-gradient(135deg, rgba(170,255,252,0.2) 0%, rgba(1,149,144,0.4) 100%);
 }
 
+.galstan {
+  font-family: "standard_galactic_alphabetRg",sans-serif;
+  line-height: 1em;
+}
+
+div.galstan b {
+  font-weight: 1800;
+}
+
 div.footer {
   width: 60vw;
   max-width: 1280px;
@@ -172,6 +186,59 @@ div.readingarea {
   background-position: -19px -19px;
 }
 
+.scifi-button {
+  display: block;
+  position: relative;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1em;
+  text-transform: uppercase;
+  background: rgba(42, 231, 224, 0.8);
+  padding: 10px 18px;
+  text-decoration: none;
+  color: #0a3836;
+  margin: 0 0px;
+  border-radius:0;
+  overflow:hidden;
+  transition:all 0.6s cubic-bezier(0.05, 3, 1, 1) 0s;
+}
+
+
+
+.scifi-button:after,
+.scifi-button:before {
+  content: "";
+  display: block;
+  position: absolute;
+  border: 2px solid #49839900;
+  width: 10px;
+  top:0;
+  bottom:0;
+  transition:all 0.6s cubic-bezier(0.05, 3, 1, 1) 0s;
+}
+
+.scifi-button:before {
+  border-right: 0;
+  margin-right: 5px;
+  left:0;
+}
+
+.scifi-button:after {
+  border-left: 0;
+  margin-left: 5px;
+  right:0;
+}
+
+.scifi-button:hover {
+  background: rgba(6, 33, 60, 0.4);
+  color: #fff;
+}
+
+.scifi-button:hover:after,
+.scifi-button:hover:before {
+  border-color: #1ae3de #498399;
+}
+
 /* Style the button that is used to open and close the collapsible content */
 .collapsible {
   font-size: 30px;
@@ -224,42 +291,61 @@ div.readingarea {
   margin-right: auto;
 }
 
-.collapsible3 {
-  font-weight:bold;
-  color: #aafffc;
-  text-shadow: 0px 0px 5px rgba(43,237,230,0.3);
- cursor: pointer;
- border: solid 3px #aafffc;
- text-align: center;
- outline: none;
- margin-top: auto;
- margin-bottom: auto;
- margin-right: 0.8em;
- background-color: rgba(23,162,184,0.0);
-  padding-top: 0.4em;
-  padding-bottom: 0.4em;
-  padding-left: 1em;
-  padding-right: 1em;
-  border-width: 3px;
-  transition: border-radius .5s ease;
-}
-.collapsible3:before {
-    content: ' ';
-    border: 2px transparent solid;
-    position: absolute;
-    left: 5px;
-    top: 5px;
-    box-sizing: border-box;
-    width: 110px;
-    height: 40px;
-    transition: border-radius .7s ease; }
-.collapsible3:hover {
-  background-color: rgba(66, 214, 202, 0.7);
-  color: #fff;
-  border-radius: 20px; }
-.collapsible3:hover:before {
-    border-radius: 20px;
-    border: 2px #42D6CA solid; }
+
+
+
+    .collapsible3 {
+      display: block;
+      position: relative;
+      font-size: 12px;
+      font-weight: bold;
+      line-height: 1em;
+      text-transform: uppercase;
+      background: rgba(42, 231, 224, 0.8);
+      padding: 10px 18px;
+      text-decoration: none;
+      color: #0a3836;
+      margin: 0 0px;
+      border-radius:0;
+      overflow:hidden;
+      transition:all 0.6s cubic-bezier(0.05, 3, 1, 1) 0s;
+    }
+
+
+
+    .collapsible3:after,
+    .collapsible3:before {
+      content: "";
+      display: block;
+      position: absolute;
+      border: 2px solid #49839900;
+      width: 10px;
+      top:0;
+      bottom:0;
+      transition:all 0.6s cubic-bezier(0.05, 3, 1, 1) 0s;
+    }
+
+    .collapsible3:before {
+      border-right: 0;
+      margin-right: 5px;
+      left:0;
+    }
+
+    .collapsible3:after {
+      border-left: 0;
+      margin-left: 5px;
+      right:0;
+    }
+
+    .collapsible3:hover {
+      background: rgba(6, 33, 60, 0.4);
+      color: #fff;
+    }
+
+    .collapsible3:hover:after,
+    .collapsible3:hover:before {
+      border-color: #1ae3de #498399;
+    }
 
 /* Style the collapsible content. Note: hidden by default */
 .content {
@@ -384,8 +470,17 @@ figure.articleFigure {
   margin-bottom: 1em;
   border: solid 2px #aafffc;
   background: linear-gradient(135deg, rgba(170,255,252,0.2) 0%, rgba(1,149,144,0.4) 100%);
-
+  display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto min-content;
+    gap: 10px 0px;
+    grid-template-areas:
+      "zone1"
+      "zone-3";
 }
+
+.aIzone1 { grid-area: zone1; }
+.aIzone-3 { grid-area: zone-3; }
 
 figure.articleFigureDuo {
   width: 45%;
