--- a/projects/WCSpace/wcspace.css
+++ b/projects/WCSpace/wcspace.css
@@ -655,6 +655,9 @@ th{border: solid 1px #aafffc;padding:0.2em;padding-top: 1.5em;padding-left: 0.3e
   figure.articleFigureDuo {width: 100%!important;float:none; margin-left:auto; margin-right:auto; }
   .quote {width: 100%}
   img {width: 100%}
+  #toc {float:none; margin-right: 0; width: 93%;}
+  ol {margin-left: auto; margin-right: auto; align-content: center;}
+  ul {margin-left: auto; margin-right: auto; align-content: center;}
 }
 
 /* Mobile shit */
@@ -686,7 +689,7 @@ th{border: solid 1px #aafffc;padding:0.2em;padding-top: 1.5em;padding-left: 0.3e
   .collapsible2 {float:none;}
   .floatL {float:none!important; margin-left: 0!important;}
   .floatR {float:none!important; margin-right: 0!important;}
-  #toc {float:none; margin-right: 0;}
+  #toc {float:none; margin-right: 0; width: 93%;}
   .sidebar {float:none;}
   video {width:100%;}
   .center {width:100%;}
@@ -695,4 +698,6 @@ th{border: solid 1px #aafffc;padding:0.2em;padding-top: 1.5em;padding-left: 0.3e
   figure.articleFigure {width: 100% !important;float:none; margin-left:auto; margin-right:auto; }
   figure.articleFigureDuo {width: 100%!important;float:none; margin-left:auto; margin-right:auto; }
   .quote {width: 100%}
+  ol {margin-left: auto; margin-right: auto; align-content: center;}
+  ul {margin-left: auto; margin-right: auto; align-content: center;}
 }
