--- a/projects/eyomgame2/styles.css
+++ b/projects/eyomgame2/styles.css
@@ -104,6 +104,7 @@ iframe {
     sans-serif;
   margin-left: 0.4em;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  cursor: pointer;
 }
 #types span.type1 {
   color: #06080f;
